--- a/MyXL.html
+++ b/MyXL.html
@@ -50,7 +50,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4">
-     <a style="text-decoration:none; color:black;" href="intent://www.xl.co.id/id/myxl?plp=e0f9605b-5dad-486e-a378-cf40d5b7f2ba#Intent;package=com.google.android.gms;action=com.google.firebase.dynamiclinks.VIEW_DYNAMIC_LINK;scheme=https;S.browser_fallback_url=https://play.google.com/store/apps/details%3Fid%3Dcom.apps.MyXL&pcampaignid%3Dfdl_short&url%3Dhttps://www.xl.co.id/id/myxl%3F;end;">
+     <a style="text-decoration:none; color:black;" href="intent://www.xl.co.id/id/myxl?plp=7d8bceb4-7a44-428b-b33d-848b29d4a522#Intent;package=com.google.android.gms;action=com.google.firebase.dynamiclinks.VIEW_DYNAMIC_LINK;scheme=https;S.browser_fallback_url=https://play.google.com/store/apps/details%3Fid%3Dcom.apps.MyXL&pcampaignid%3Dfdl_short&url%3Dhttps://www.xl.co.id/id/myxl%3F;end;">
       <div class="card">
         <div class="card-header">
           <svg class="icon-svg" viewBox="0 0 24 24">
@@ -59,7 +59,7 @@
           <span class="card-title">MyXL</span>
         </div>
         <div class="card-body">
-          <p class="card-text">Paket XL Xtra Combo Plus</p>
+          <p class="card-text">Paket XL VIDIO</p>
         </div>
       </div>
     </div>
